Removed chess board caching all together. It just causes problems, and you do not gain much from it.